# FoldScript

./: CMakeLists.txt  LICENSE  README.md
example/fasm/: add.fasm
example/fec/: ADD.FEC  LOOP.FEC  loop.fasm
include/fasm/component/: lexer.h  parser.h
include/fasm/framework/: instr.h  op.h  sheader.h  source.h  strtable.h
include/fasm/framework/function/: funcnode.h  functable.h
include/fasm/framework/instruction/: inslktable.h  instable.h  instr.h  instrlookup.h
include/fasm/framework/label/: labnode.h  labtable.h
include/fasm/framework/symbol/: symnode.h  symtable.h
include/fasm/lexer/: lexer.h
include/fasm/utils/: macro.h  utils.h
include/fvm/framework/: functable.h  hostapi.h  rstack.h  script.h  value.h
include/fvm/framework/instruction/: instable.h  instr.h
include/fvm/utils/: macro.h  utils.h
include/fvm/vm/: vm.h
src/: CMakeLists.txt
src/fasm/: CMakeLists.txt
src/fasm/component/: CMakeLists.txt  lexer.cpp  parser.cpp
src/fasm/example/: loop.fasm
src/fasm/framework/: CMakeLists.txt  instr.cpp  source.cpp  strtable.cpp
src/fasm/framework/function/: funcnode.cpp  functable.cpp
src/fasm/framework/instruction/: inslktable.cpp  instable.cpp  instr.cpp  instrlookup.cpp
src/fasm/framework/label/: labnode.cpp  labtable.cpp
src/fasm/framework/symbol/: symnode.cpp  symtable.cpp
src/fasm/lexer/: CMakeLists.txt  lexer.cpp
src/fasm/main/: CMakeLists.txt  main.cpp
src/fasm/utils/: CMakeLists.txt  utils.cpp
src/fvm/: CMakeLists.txt
src/fvm/framework/: CMakeLists.txt  functable.cpp  hostapi.cpp  rstack.cpp  script.cpp  value.cpp
src/fvm/framework/instruction/: instable.cpp  instr.cpp
src/fvm/main/: CMakeLists.txt  main.cpp
src/fvm/utils/: CMakeLists.txt  utils.cpp
src/fvm/vm/: CMakeLists.txt  vm.cpp
tests/: CMakeLists.txt
tests/fasm/: CMakeLists.txt
tests/fasm/test_component/: test_lexer.cpp  test_parser.cpp
tests/fasm/test_framework/: test_function.cpp  test_instr_table.cpp  test_instrlookup.cpp  test_label.cpp  test_source.cpp  test_symbol.cpp
tests/fasm/test_lexer/: test_lexer.cpp
tests/fasm/test_utils/: test_utils.cpp
tests/fvm/: CMakeLists.txt  test_fvm.cpp
tests/fvm/test_framework/: test_hostapi.cpp  test_instable.cpp  test_instr.cpp  test_rstack.cpp  test_script.cpp  test_value.cpp
tests/fvm/test_utils/: test_utils.cpp
